@@ -1,9 +1,12 @@
 package org.soak.map.event.block.portal;
 
 import org.bukkit.event.EventPriority;
+import org.bukkit.event.Listener;
 import org.bukkit.event.world.PortalCreateEvent;
+import org.bukkit.plugin.EventExecutor;
+import org.bukkit.plugin.Plugin;
 import org.soak.WrapperManager;
-import org.soak.map.event.EventSingleListenerWrapper;
+import org.soak.map.event.SoakEvent;
 import org.soak.plugin.SoakManager;
 import org.soak.wrapper.block.SoakBlockSnapshot;
 import org.soak.wrapper.entity.AbstractEntity;
@@ -12,45 +15,18 @@ import org.spongepowered.api.block.transaction.Operations;
 import org.spongepowered.api.data.Transaction;
 import org.spongepowered.api.entity.Entity;
 import org.spongepowered.api.event.EventContextKeys;
-import org.spongepowered.api.event.Listener;
 import org.spongepowered.api.event.Order;
 import org.spongepowered.api.event.block.ChangeBlockEvent;
 import org.spongepowered.api.item.ItemTypes;
 
-public class SoakNetherPortalCreateEvent {
+public class SoakNetherPortalCreateEvent extends SoakEvent<ChangeBlockEvent.All, PortalCreateEvent> {
 
-    private final EventSingleListenerWrapper<PortalCreateEvent> singleEventListener;
-
-    public SoakNetherPortalCreateEvent(EventSingleListenerWrapper<PortalCreateEvent> wrapper) {
-        this.singleEventListener = wrapper;
+    public SoakNetherPortalCreateEvent(Class<PortalCreateEvent> bukkitEvent, EventPriority priority, Plugin plugin, Listener listener, EventExecutor executor, boolean ignoreCancelled) {
+        super(bukkitEvent, priority, plugin, listener, executor, ignoreCancelled);
     }
 
-    @Listener(order = Order.FIRST)
-    public void firstEvent(ChangeBlockEvent.All spongeEvent) {
-        fireEvent(spongeEvent, EventPriority.HIGHEST);
-    }
-
-    @Listener(order = Order.EARLY)
-    public void earlyEvent(ChangeBlockEvent.All spongeEvent) {
-        fireEvent(spongeEvent, EventPriority.HIGH);
-    }
-
-    @Listener(order = Order.DEFAULT)
-    public void normalEvent(ChangeBlockEvent.All spongeEvent) {
-        fireEvent(spongeEvent, EventPriority.NORMAL);
-    }
-
-    @Listener(order = Order.LATE)
-    public void lateEvent(ChangeBlockEvent.All spongeEvent) {
-        fireEvent(spongeEvent, EventPriority.LOW);
-    }
-
-    @Listener(order = Order.LAST)
-    public void lastEvent(ChangeBlockEvent.All spongeEvent) {
-        fireEvent(spongeEvent, EventPriority.LOWEST);
-    }
-
-    private void fireEvent(ChangeBlockEvent.All spongeEvent, EventPriority priority) {
+    @Override
+    public void handle(ChangeBlockEvent.All spongeEvent) {
         var entity = spongeEvent.cause().first(Entity.class).map(AbstractEntity::wrap).orElse(null);
         var blocks = spongeEvent
                 .transactions(Operations.PLACE.get())
@@ -58,10 +34,10 @@ public class SoakNetherPortalCreateEvent {
                 .map(Transaction::finalReplacement)
                 .map(blockSnapshot -> new SoakBlockSnapshot(blockSnapshot).getState())
                 .toList();
-        if(blocks.isEmpty()){
+        if (blocks.isEmpty()) {
             return;
         }
-        var world = blocks.get(0).getWorld();
+        var world = blocks.getFirst().getWorld();
         var cause = spongeEvent
                 .context()
                 .get(EventContextKeys.USED_ITEM)
@@ -72,11 +48,9 @@ public class SoakNetherPortalCreateEvent {
                 .orElse(PortalCreateEvent.CreateReason.NETHER_PAIR);
 
         var event = new PortalCreateEvent(blocks, world, entity, cause);
-        SoakManager.<WrapperManager>getManager().getServer().getSoakPluginManager().callEvent(this.singleEventListener, event, priority);
-
+        fireEvent(event);
         if (event.isCancelled()) {
             spongeEvent.setCancelled(true);
         }
-
     }
 }
